--- a/src/components/ImageCard/ImageCard.module.css
+++ b/src/components/ImageCard/ImageCard.module.css
@@ -8,4 +8,10 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: all 0.8s ease 0s;
+}
+
+.img:hover {
+  transform: scale(1.02);
+  transition: all 0.8s ease 0s;
 }
