--- a/src/components/ImageModal/ImageModal.module.css
+++ b/src/components/ImageModal/ImageModal.module.css
@@ -6,7 +6,7 @@
   width: 100%;
   max-width: 800px;
   max-height: 90%;
-  background-color: #413f3f;
+  background-color: rgb(86, 84, 84);
   padding: 20px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   outline: none;
@@ -14,11 +14,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+  z-index: 9999;
 }
 
-.img {
-  max-width: 100%;
-  max-height: 70vh;
+.containerImg {
+  height: 520px;
+  width: 640px;
+}
+
+.containerImg .img {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   border-radius: 10px;
 }
@@ -29,10 +36,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   background-color: rgba(0, 0, 0, 0.75);
+  overflow: hidden;
 }
 
 .btn {
@@ -44,4 +49,33 @@
   font-size: 1.5rem;
   cursor: pointer;
   color: #201f1f;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.likes {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  padding-left: 100px;
+}
+
+.user {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  padding-right: 100px;
+}
+
+.description {
+  color: rgb(112, 235, 112);
+  font-size: 30px;
+  line-height: 1.1;
 }
